# apis-catalog

./: .gitignore  .travis.yml  Cargo.toml  README.md  lcov.info
.github/workflows/: rust.yml
cli/: Cargo.toml
cli/config/: local.toml
cli/src/: main.rs
cli/src/settings/: mod.rs
data/: apis-catalog-apis.db  apis-catalog-domains.db  apis-catalog-envs.db  apis-catalog-metrics.db  apis-catalog-store.db  apis-metrics-domains.db
server/: .dockerignore  .env  Cargo.toml  Dockerfile
server/config/: local-template.toml  sample.toml
server/db/: apis-catalog-all-backup.db  apis-catalog-all-backup.db.1  apis-catalog-all.db  apis-catalog-all.db.backup-11012020
server/docker-config/: docker-local-env-template.list  entrypoint.sh
server/migrations/2020-06-30-060925_tiers/: down.sql  up.sql
server/migrations/2020-08-18-171515_zally_ignore/: down.sql  up.sql
server/migrations/2020-09-26-135256_endpoints_per_audience/: down.sql  up.sql
server/migrations/2020-10-31-082946_alter_domains_owner/: down.sql  up.sql
server/src/: main.rs  models.rs  settings.rs
server/src/app/: apis.rs  catalogs.rs  config.rs  deployments.rs  domains.rs  envs.rs  metrics.rs  mod.rs  search.rs  systems.rs  tiers.rs
server/src/app/dao/: mod.rs
server/src/app/dao/catalog/: mod.rs  spec.rs
server/src/app/dao/catalog/handlers/: mod.rs
server/src/app/dao/catalog/handlers/implem/: asyncapi.rs  mod.rs  opanapi.rs  proto.rs
server/src/app/dao/repo_apis/: mod.rs
server/src/app/dao/repo_deployments/: mod.rs
server/src/app/dao/repo_domains/: mod.rs
server/src/app/dao/repo_envs/: mod.rs
server/src/app/dao/repo_layers/: mod.rs
server/src/app/dao/repo_metrics/: mod.rs
server/src/app/dao/search/: mod.rs
server/src/catalog/: mod.rs
server/src/dao/: mod.rs
server/src/dao/catalog/: mod.rs
server/src/dao/repo_apis/: mod.rs
server/src/dao/repo_deployments/: mod.rs
server/src/dao/repo_domains/: mod.rs
server/src/dao/repo_envs/: mod.rs
server/src/dao/repo_metrics/: mod.rs
server/src/repo/: mod.rs
server/src/settings/: mod.rs
server/src/shared/: settings.rs
server/tests/data/: systems-layers-catalog.yaml
server/tests/data/catalog/: analytics-time-series.yaml  async-api-sample.yaml  history-trail-operator.yaml
server/tests/data/catalog/async/: messaging-1.0.0.yml  messaging-2.6.0.yml
server/tests/data/catalog/test/: ignored-spec.yaml
ui/: index.html  package.json
