[package]
name = "apis"
version = "0.1.0"
authors = ["MALLASSI Olivier <Olivier.MALLASSI@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.31.2"
reqwest = "0.9.20"
serde = "1.0.104"
log = "0.4.8"
env_logger = "0.7.0"
crossterm = "0.11"
prettytable-rs = "^0.8"