[package]
name = "catalog"
version = "0.1.0"
authors = ["MALLASSI Olivier <Olivier.MALLASSI@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.31.2"
reqwest = "0.9.20"
serde = "1.0.104"
log = "0.4.8"
env_logger = "0.9.0"
crossterm = "0.21.0"
prettytable-rs = "^0.10"
uuid = { version = "0.8", features = ["serde", "v1", "v3", "v4","v5"] }
lazy_static = "1.4.0"
config = "0.11.0"