[package]
name = "apis_catalog_server"
version = "0.1.0"
authors = ["MALLASSI Olivier <Olivier.MALLASSI@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-chain = "0.12.1"
log = "0.4.8"
env_logger = "0.7.0"
actix-web = "2.0.0"
actix-rt = "1.0"
actix-files = "0.2.1"
# actix-web = { git = "https://github.com/actix/actix-web" }
openapiv3 = "0.3.0"
serde_json = "1.0.44"
serde_yaml = "0.8.9"
serde = "1.0.104"
glob = "0.3.0"
failure = "0.1.1"
git2 = "0.10.1"
lazy_static = "1.4.0"
reqwest = "0.9.20"
chrono = "0.4"
config = "0.10.1"

rusqlite = { version = "0.21.0", features = ["uuid", "chrono"] }
time = "0.1"
uuid = { version = "0.8", features = ["serde", "v1", "v3", "v4","v5"] }
# sqlite = "0.25.0"

# [dependencies.rustbreak]
# version = "2.0.0-rc3"
# features = ["ron_enc"]
