[package]
name = "apis_catalog_server"
version = "0.1.0"
authors = ["MALLASSI Olivier <Olivier.MALLASSI@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-chain = "0.12.1"
log = "0.4.8"
fern = { version = "0.6.0", features = ["colored"] }
# env_logger = "0.7.0"
actix-web = "3.3.2"
#actix-rt = "2.2.0"
actix-files = "0.5.0"
openapiv3 = "0.3.2"
serde_json = "1.0.44"
serde_yaml = "0.8.9"
yaml-rust = "0.4"
serde_urlencoded="0.7.0"
serde = "1.0.104"
glob = "0.3.0"
failure = "0.1.1"
git2 = "0.10.1"
lazy_static = "1.4.0"
reqwest = "0.9.20"
chrono = { version = "0.4.19", features = ["serde"] }
config = "0.11.0"
rusqlite = { version = "0.22.0", features = ["bundled", "uuid", "chrono", "trace"] }
diesel = { version = "1.4.4", features = ["sqlite"] }
dotenv = "0.15.0"
time = "0.1"
uuid = { version = "0.8", features = ["serde", "v1", "v3", "v4","v5"] }
histogram = "0.6.9"
clokwerk = "0.3.0"
cmd_lib = "0.7.8"
regex = "1.3.9"
rand = "0.7.3"

# [dependencies.rustbreak]
# version = "2.0.0-rc3"
# features = ["ron_enc"]
