[package]
name = "apis_catalog_server"
version = "0.1.0"
authors = ["MALLASSI Olivier <Olivier.MALLASSI@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-chain = "0.12.4"
log = "0.4.20"
fern = { version = "0.6.2", features = ["colored"] }
actix-web = "4.4.0"
#actix-rt = "2.2.0"
actix-files = "0.6.2"
openapiv3 = "1.0.3"
serde_json = "1.0.107"
serde_yaml = "0.9.25"
yaml-rust = "0.4"
serde_urlencoded="0.7.0"
serde = "1.0.188"
globwalk = "0.8.1"
failure = "0.1.8"
#git2 = "0.18.0"
lazy_static = "1.4.0"
reqwest = { version = "0.11.22", features = ["blocking", "json"] }
chrono = { version = "0.4.31", features = ["serde"] }
config = "0.13.3"
rusqlite = { version = "0.22.0", features = ["bundled", "uuid", "chrono", "trace"] }
diesel = { version = "1.4.4", features = ["sqlite"] }
dotenv = "0.15.0"
uuid = { version = "0.8", features = ["serde", "v1", "v3", "v4","v5"] }
histogram = "0.6.9"
clokwerk = "0.4.0"
cmd_lib = "1.3.0"
regex = "1.10.2"
rand = "0.7.3"
time = "0.3.28"
# moka = {version = "0.12.0", features = ["sync"]}
quick_cache = "0.4.0"
tantivy = "0.20.2"
cargo-outdated = "0.13.1"
indexmap = "2.0.2"
# [dependencies.rustbreak]
# version = "2.0.0-rc3"
# features = ["ron_enc"]
